[Style] V2 of the design of the page
Add CSS and new components to the page
- Header
- Verticalmenu

--- a/src/TodoCounter.css
+++ b/src/TodoCounter.css
@@ -1,4 +1,7 @@
 .TodoCounter {
   font-size: 48px;
-  text-align: center;
+  color: #284C5B;
+  padding-left: 20px;
+  margin-top: 20px;
+  font-weight: 500;
 }
